--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   ],
   "homepage": "https://github.com/implausible/find-git-repositories",
   "dependencies": {
-    "nan": "^2.14.0"
+    "bindings": "^1.5.0",
+    "nan": "^2.14.0",
+    "node-addon-api": "^2.0.0"
   },
   "devDependencies": {
     "mocha": "^7.0.0",
